packages/nextjs/styles/globals.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

:root,
[data-theme] {
  background: oklch(var(--b2));
}

body {
  min-height: 100vh;
}

h1,
h2,
h3,
h4 {
  margin-bottom: 0.5rem;
  line-height: 1;
}

p {
  margin: 1rem 0;
}

.btn {
  @apply shadow-md;
}

.btn.btn-ghost {
  @apply shadow-none;
}

/* Markdown Formatting */
.prose h1,
.prose h2,
.prose h3,
.prose h4,
.prose h5,
.prose h6 {
  @apply break-words overflow-wrap-anywhere;
}

.prose img {
  @apply max-w-full h-auto my-4 mx-auto rounded-lg;
  max-height: 90vh;
}

.prose pre,
.prose code {
  @apply overflow-x-auto whitespace-pre-wrap bg-[#edf2f7] text-primary dark:bg-[#171923] text-[10px] sm:text-xs md:text-sm;
}

.prose hr {
  @apply my-4 sm:my-7;
}

@layer utilities {
  .overflow-wrap-anywhere {
    overflow-wrap: anywhere;
  }
}

.prose h1 {
  @apply text-lg sm:text-3xl md:text-4xl;
}

.prose h2 {
  @apply text-base sm:text-2xl md:text-3xl;
}

.prose h3 {
  @apply text-sm sm:text-xl md:text-2xl;
}

.prose p,
.prose li,
.prose blockquote,
.prose td,
.prose th,
.prose strong,
.prose em,
.prose ul,
.prose ol,
.prose dl,
.prose figcaption {
  @apply text-xs sm:text-sm md:text-base;
}

